...
          // TRY THIS: Invoke "debug painting" (choose the "Toggle Debug Paint"
          // action in the IDE, or press "p" in the console), to see the
          // wireframe for each widget.
          mainAxisAlignment: MainAxisAlignment.center,
          children: <Widget>[
            TextButton(
              key: const Key('login'),
              child: const Text('Вход'),
              onPressed: () {
                Navigator.pushNamed(context, '/login_view');
              },
            ),
            TextButton(
              key: const Key('register'),
              child: const Text('Регистрация'),
              onPressed: () {
                Navigator.pushNamed(context, '/register_view');
              },
            ),
          ],
...
